--- a/plugin.xml
+++ b/plugin.xml
@@ -13,6 +13,6 @@
 	</engines>
 
 	<source-file src="xslt.js" />
-	<hook type="after_plugin_install" src="xslt.js" />
+	<hook type="after_plugin_add" src="xslt.js" />
 	<hook type="after_prepare" src="xslt.js" />
 </plugin>
