--- a/plugin.xml
+++ b/plugin.xml
@@ -9,7 +9,8 @@
 	<description>XSLT via hook</description>
 
 	<engines>
-		<engine name="cordova" version=">=3.8.0" />
+    <engine name="cordova-android" version=">=5" />
+    <engine name="cordova-ios" version=">=4" />
 	</engines>
 
 	<source-file src="xslt.js" />
