--- a/plugin.xml
+++ b/plugin.xml
@@ -8,11 +8,11 @@
 	<name>XSLT via hook</name>
 	<description>XSLT via hook</description>
 
-	<engines>
+<!-- 	<engines>
     <engine name="cordova-android" version=">=5" />
     <engine name="cordova-ios" version=">=4" />
 	</engines>
-
+ -->
 	<source-file src="xslt.js" />
 	<hook type="after_plugin_add" src="xslt.js" />
 	<hook type="after_prepare" src="xslt.js" />
